--- a/sqlnodetediousexpressangular/app/app/src/app/app.component.html
+++ b/sqlnodetediousexpressangular/app/app/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 
-</div>
+
 <!-- Nav tabs -->
 <ul class="nav nav-tabs" id="navId">
   <li class="nav-item active">
@@ -23,7 +23,7 @@
   <div class="tab-pane fade" id="tab3Id" role="tabpanel"></div>
   <div class="tab-pane fade" id="tab4Id" role="tabpanel"></div>
   <div class="tab-pane fade" id="tab5Id" role="tabpanel"></div>
-  <router-outlet></router-outlet>
+  <div class="right"> <router-outlet></router-outlet></div>
 </div>
 
 <script>
@@ -32,3 +32,4 @@
     $(this).tab('show');
   });
 </script>
+</div>
