--- a/sqlnodetediousexpressangular/app/app/src/app/employees/employees.component.html
+++ b/sqlnodetediousexpressangular/app/app/src/app/employees/employees.component.html
@@ -1,1 +1,26 @@
-<p>employees works!</p>
+<div class="row">
+   <table class="table table-striped table-inverse table-responsive">
+     <thead class="thead-dark">
+       <tr>
+         <th>ID</th>
+         <th>Name</th>
+         <th>Job</th>
+         <th>Manager</th>
+         <th>salary</th>
+         <th>Department</th>
+         <th>Location</th>
+       </tr>
+       </thead>
+       <tbody>
+         <tr *ngFor="let e of employees">
+           <td scope="row">{{e.empno}}</td>
+           <td>{{e.ename}}</td>
+           <td>{{e.job}}</td>
+           <td>{{e.mgr}}</td>
+           <td>{{e.sal}}</td>
+           <td>{{e.dname}}</td>
+           <td>{{e.loc}}</td>
+         </tr>
+       </tbody>
+   </table>
+</div>
