--- a/sqlnodetediousexpressangular/app/app/src/app/employees/employees.component.html
+++ b/sqlnodetediousexpressangular/app/app/src/app/employees/employees.component.html
@@ -20,6 +20,7 @@
            <td>{{e.sal}}</td>
            <td>{{e.dname}}</td>
            <td>{{e.loc}}</td>
+           <td><button class="btn btn-danger" (click)='navigateempDetails(e.empno)'>Details</button>  </td>
          </tr>
        </tbody>
    </table>
